# cmake_build_cxx

./: .gitignore  README.md
YUSUR-KOS-CMAKE/: CMakeLists.txt  build.sh
YUSUR-KOS-CMAKE/common/: cfd_data_generate.cpp  cfd_data_generate.h  kos_string.h
YUSUR-KOS-CMAKE/env/: build_output_dir.cpp  build_output_dir.h  kos_env.h  parse_perf_conf.cpp  parse_perf_conf.h
YUSUR-KOS-CMAKE/main/: main.cpp
YUSUR-KOS-CMAKE/source/conf/: hd_doc.xml  kernel_config.xml
YUSUR-KOS-CMAKE/utest/: CMakeLists.txt  test.h  testmain.cpp
cmake_makefile/: README.md
cmake_makefile/YUSUR-KOS-CMAKE/: option.txt  windows_build.bat
cmake_makefile/YUSUR-KOS-CMAKE/common/: kos_string.cpp  pre_include.h  uuid.cpp  uuid.h  uuid_test.cpp  uuid_test.h
cmake_makefile/YUSUR-KOS-CMAKE/conf/: CMakeLists.txt  kos_conf.in.h
cmake_makefile/YUSUR-KOS-CMAKE/env/: kos_env.cpp
cmake_makefile/YUSUR-KOS-CMAKE/source/conf/: easylogging.conf  inst_data_conf.xml
cmake_makefile/YUSUR-KOS-CMAKE/utest/common/: kos_uuid_utest.cpp
cmake_target/: README.md
cmake_target/pro_samp/: CMakeLists.txt  config.h.in  option.txt
cmake_target/pro_samp/cmake/: some_example.cmake
doc/: dir_cmake.md  main_cmake.md
